# pdomain-book-tools

./: .claudeignore  .coveragerc.cpu  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-conventions.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  CONVENTIONS.md  DOCGRAPH.md  GPU_TESTING.md  Makefile  README.md  TEST_COVERAGE_WORKPLAN.md  TODO.md  docgraph.toml  pyproject.toml  requirements.txt  test.ipynb  train.ipynb  training-dependencies.sh  typescript  voila.json
.basedpyright/: baseline.json
.codex/agents/: python-implementer.toml  python-reviewer.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dep-refresh.yml  release.yml
docs/: README.md  ROADMAP-shipped.md  ROADMAP.md  public-api.md
docs-issues/: README.md
docs-issues/template/: TEMPLATE.md  docs-issues-README.md
docs/architecture/: README.md  checkpoint-loading-trust-boundary.md  geometry-correction.md  glyph-annotations.md  layout-debug-cleanup.md  layout-regression-fixture-corpus.md  local-dev-mode.md  ocr-model-and-schema-boundaries.md  ocr-page-orientation.md  page-model.md  page-serialization.md  pp-doclayout-trust-boundary.md  reorganize-page-pipeline.md  reorganize_pipeline.md  tesseract-integration.md  type-checking.md
docs/context/: current-state.md  decisions.md  github-issues-migration-ledger.md  intent-map.md
docs/conventions/: lint-deviations.md
docs/handoff/: 2026-07-17-issue-tracker-migration.md  2026-07-19-issue-tracker-migration.md
docs/issues/: 2026-05-10-gh-002-decoration-figure-post-classification.md  2026-05-10-gh-003-sidenote-height-ratio-default.md  2026-05-10-gh-004-sidenote-projection-x-height.md  2026-05-10-gh-005-drop-cap-heading-cross-check.md  2026-05-10-gh-006-sidenote-aware-row-blocks.md  2026-05-10-gh-007-dev-local-doctr-fork-pin.md  2026-05-11-gh-043-style-review-detect-subprocess-failure.md  2026-05-11-gh-045-spec-decoration-figure-post-classification.md  2026-05-11-gh-046-spec-sidenote-height-ratio-default.md  2026-05-11-gh-047-spec-sidenote-projection-x-height.md  2026-05-11-gh-048-spec-drop-cap-heading-cross-check.md  2026-05-11-gh-049-spec-sidenote-aware-row-blocks.md  2026-05-17-gh-054-monthly-grooming.md  2026-05-17-gh-065-decompose-spec-flags.md  2026-05-17-gh-077-workspace-agent-definitions.md  2026-05-17-gh-094-pd-ui-agent-definition.md  2026-05-17-gh-095-pd-ui-docs-agent-definition.md  2026-05-17-gh-096-pd-ocr-ops-agent-definition.md  2026-05-17-gh-097-pd-ocr-ops-docs-agent-definition.md  2026-05-17-gh-098-workspace-routing-table.md  2026-05-21-gh-161-optional-ocr-dependencies.md  2026-05-22-gh-165-checkpoint-hardening.md  2026-05-22-gh-191-strict-image-validation.md  2026-05-22-gh-201-advisory-static-scanners.md  2026-05-24-gh-208-spec-page-order-detection.md  2026-05-24-gh-209-spec-scannos-module.md  2026-05-24-gh-210-spec-hyphen-ngrams-sqlite.md  2026-05-24-gh-211-page-order-module-skeleton.md  2026-05-24-gh-212-page-order-filename-signal.md  2026-05-24-gh-213-page-order-ocr-signal.md  2026-05-24-gh-214-page-order-visual-signal.md  2026-05-24-gh-215-page-order-aggregation.md  2026-05-24-gh-216-scanno-dataclasses.md  2026-05-24-gh-217-sqlite-rule-library.md  2026-05-24-gh-218-json-candidate-store.md  2026-05-24-gh-219-scanno-scan-promote-api.md  2026-05-24-gh-220-scanno-promotion-tests.md  2026-05-24-gh-221-hyphen-ngrams-protocol.md  2026-05-24-gh-222-hyphen-ngrams-sqlite-client.md  2026-05-24-gh-223-hyphen-ngrams-json-api-client.md  (+4 more)
docs/planning/: dev-local-upgrade-flow-spec.md
docs/plans/: 10-glyph-annotations-reconcile-spa.md  2026-05-22-basedpyright-warning-burndown.md  2026-05-30-layout-debug-auto-cleanup.md  roadmap.md
docs/process/: lint-deviations.md  repository-quality-gates.md  writing-style.md
docs/research/: 2026-05-22-deep-code-security-review.md
docs/review/: README.md  bugs-high.md  bugs-low.md  bugs-medium.md  refactors.md
docs/specs/: .specrc  01-page-model.md  02-rotation.md  03-reorganize-pipeline.md  04-layout-regression-fixtures.md  05-glyph-annotations.md  06-word-reference-lines.md  06a-word-reference-lines-audit.md  06b-word-reference-lines-api.md  06c-word-reference-lines-testing.md  07-dev-local-upgrade-flow.md  08-geometry-repr.md  09-char-bbox-extraction.md  10-table-structure.md  2026-05-10-feature-request-lifecycle-e2e-smoke-design.md  2026-05-24-hyphen-ngrams-sqlite.md  2026-05-24-page-order-detection.md  2026-05-24-scannos-module.md  2026-05-30-layout-debug-auto-cleanup.md  2026-07-15-writing-docs-plugin-routing-design.md  _index.md
docs/usage/: geometry-correction.md  public-api.md
migration/github-issues/: README.md  deletion-journal.tsv  reconciliation.tsv
pd_book_tools/: __init__.py  licenses.py
pd_book_tools/data/: THIRD-PARTY-NOTICES.md  __init__.py  spdx_licenses.json
pd_book_tools/geometry/: __init__.py  bounding_box.py  image_ops.py  point.py
pd_book_tools/hf/: __init__.py  download.py  models.py
pd_book_tools/image_processing/: external_tools.py  formats.py  types.py
pd_book_tools/layout/: __init__.py  _mappings.py  detector.py  geometry.py  registry.py  types.py  visualize.py
pd_book_tools/ocr/: __init__.py  _block.py  _document.py  _dropcap_lexicon.py  _page.py  _word.py  block.py  character.py  cv2_doctr.py  (+16 more)
pdomain_book_tools/: __init__.py  licenses.py
scripts/: ai-filter-log.py  ai_filter_log.py  check_dev_local.py  check_layout_fork.py  coverage_reporter.py  do-release.sh  local-check.sh  local-dev.sh  local-upgrade-deps.sh  release-common.sh  update_github_actions.py  write_dev_local_marker.py
tests/: conftest.py  test_bounding_box_py311_compat.py  test_ci_skip_behavior.py  test_coverage_documentation.py  test_coverage_soft_target.py  test_coverage_threshold.py  test_debug_cleanup.py  test_geometry_bounding_box.py  test_geometry_point.py  test_geometry_repr.py  test_image_ops_free_functions.py  test_licenses.py  test_ocr_block.py  test_ocr_document.py  test_ocr_page.py  test_ocr_word.py  test_packaging.py  test_page_behavior_pin.py  test_page_model_doc.py  test_public_api.py  test_schemas_emit.py  test_update_github_actions.py
(+657 files in other folders)
