[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "pd-book-tools"
version = "0.3.0"
description = "Python tools for working with public domain book scans"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "ipython>=8.34",
    "ipywidgets>=8.1",
    "isort>=6.0",
    "matplotlib>=3.10.1",
    "numpy (>=2.2,<3)",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-cuda>=0.0.2",
    "opencv-python>=4.11.0",
    "packaging<=21.3",
    "pandas>=2.2.3",
    "pytesseract (>=0.3.13,<0.4.0)",
    "python-doctr",
    "regex (>=2024.11.6,<2025.0.0)",
    "shapely>=2.0",
    "thefuzz (>=0.22.1,<0.23.0)",
    "torch>=2.6",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "pylint>=3.3.7",
    "pytest-cov>=6.2.1",
    "pytest>=8.3",
    "ruff>=0.12.5",
]


[project.urls]
Homepage = "https://github.com/ConcaveTrillion/pd-book-tools"
Repository = "https://github.com/ConcaveTrillion/pd-book-tools"

[tool.uv.sources]
python-doctr = { git = "https://github.com/mindee/doctr.git" }

[tool.coverage.run]
source = ["pd_book_tools"]
branch = true
omit = [
    "*/tests/*",
    "*/.*/*",
    "*/site-packages/*",
]
concurrency = ["thread"]  # NiceGUI & timers may spawn threads

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
precision = 1
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
    "^if TYPE_CHECKING:",
    "^\\s*pass$",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Pytest configuration
[tool.pytest.ini_options]
addopts = "--cov=pd_book_tools --cov-report=term-missing:skip-covered --cov-report=html"
markers = [
    "gpu: marks tests as requiring GPU/CUDA functionality",
    "cupy: marks tests as requiring CuPy library",
    "torch_cuda: marks tests as requiring PyTorch CUDA",
    "slow: marks tests as slow (use -m 'not slow' to skip)",
    "integration: marks tests as integration tests"
]
# Skip GPU tests by default in CI environments
filterwarnings = [
    "ignore::UserWarning:cupy.*",
    "ignore::FutureWarning:torch.*"
]
