[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "pd-book-tools"
dynamic = ["version"]
description = "Python tools for working with public domain book scans"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "huggingface_hub>=0.23",
    "ipython>=8.34",
    "ipywidgets>=8.1",
    "matplotlib>=3.10.1",
    "numpy (>=2.2,<3)",
    "opencv-contrib-python>=4.12.0.88",
    "pandas>=2.2.3",
    # Pillow was previously a transitive dep (via matplotlib / others). It is
    # now declared directly because pd_book_tools owns its image-format
    # contract: pillow-heif / pillow-avif-plugin both register decoders with
    # Pillow at import time, so we need an explicit version contract.
    "Pillow>=10.0",
    # HEIF/HEIC decode via libheif (LGPL-3) + libde265 (LGPL-3). pillow-heif
    # itself is BSD-3. We rely on Python's dynamic-loading model (LGPL §6 —
    # explicitly permits dynamic linking with a non-LGPL caller) to remain
    # compatible with this project's Unlicense terms; do not statically link
    # or bundle libheif into a derived binary. We only ever decode
    # (never encode HEVC), so the x265 GPL/patent path does not apply.
    "pillow-heif>=0.18",
    # AVIF decode via libaom (BSD-2) through pillow-avif-plugin (MIT) —
    # fully permissive, no LGPL caveats.
    "pillow-avif-plugin>=1.4",
    "pydantic>=2.0",
    "pytesseract (>=0.3.13,<0.4.0)",
    "python-doctr",
    "regex (>=2024.11.6,<2025.0.0)",
    "shapely>=2.0",
    "thefuzz (>=0.22.1,<0.23.0)",
    "torch>=2.6",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.45",
]

[project.optional-dependencies]
# CUDA-12-only GPU acceleration. Opt-in to avoid breaking CPU-only installs
# (CI, macOS, CPU-only Linux). Install with: pip install 'pd-book-tools[gpu]'
gpu = [
    "cupy-cuda12x>=13.4.1",
    "opencv-cuda>=0.0.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "isort>=6.0",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pylint>=3.3.7",
    "pytest-cov>=6.2.1",
    "pytest>=8.3",
    "ruff>=0.12.5",
    "pytest-xdist>=3.8.0",
]


[project.urls]
Homepage = "https://github.com/ConcaveTrillion/pd-book-tools"
Repository = "https://github.com/ConcaveTrillion/pd-book-tools"

[tool.hatch.version]
source = "vcs"

# Generated at build time; do not edit. Tracked in .gitignore.
# Importable as `from pd_book_tools._version import __version__, version`.
[tool.hatch.build.hooks.vcs]
version-file = "pd_book_tools/_version.py"

[tool.uv.sources]
python-doctr = { git = "https://github.com/mindee/doctr.git" }

[tool.coverage.run]
source = ["pd_book_tools"]
branch = true
omit = [
    "*/tests/*",
    "*/.*/*",
    "*/site-packages/*",
    # GPU-only modules: tests exist but skip without CUDA/CuPy.
    # Excluded so CPU-only coverage runs report a meaningful baseline.
    "*/image_processing/cupy_processing/*",
    "*/image_processing/cv2cuda_processing/*",
]
concurrency = ["thread"]  # NiceGUI & timers may spawn threads

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
precision = 1
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
    "^if TYPE_CHECKING:",
    "^\\s*pass$",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "SIM", "UP", "RUF", "ERA", "T20"]
ignore = [
    # `l` is widely used as the loop-variable name for "line" in the OCR layout
    # code. Renaming everywhere is invasive and the meaning is always
    # unambiguous from context (always paired with `.bounding_box`, `.text`,
    # `.minX/minY/...`). Suppressing E741 keeps the convention consistent.
    "E741",
    # Line length: many long docstrings, error messages, and URLs; enforcing
    # 88-char wrapping everywhere adds noise without improving readability.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Files that use the project's camelCase coordinate API (minX/maxX/minY/maxY).
# Renaming these names everywhere would be an invasive API-breaking change.
"pd_book_tools/geometry/bounding_box.py" = ["N802", "F401"]  # N802: coord props; F401: back-compat re-exports
"pd_book_tools/geometry/point.py" = ["N806"]
"pd_book_tools/hf/download.py" = ["N806"]
"pd_book_tools/image_processing/cupy_processing/color_to_gray.py" = ["N806"]
"pd_book_tools/image_processing/cupy_processing/contours.py" = ["N806"]
"pd_book_tools/image_processing/cupy_processing/crop.py" = ["N803", "N806"]
"pd_book_tools/image_processing/cupy_processing/deskew.py" = ["N806"]
"pd_book_tools/image_processing/cupy_processing/edge_finding.py" = ["N806"]
"pd_book_tools/image_processing/cv2_processing/contours.py" = ["N806"]
"pd_book_tools/image_processing/cv2_processing/crop.py" = ["N803", "N806"]
"pd_book_tools/image_processing/cv2_processing/edge_finding.py" = ["N806"]
"pd_book_tools/image_processing/cv2_processing/perspective_adjustment.py" = ["N806"]
"pd_book_tools/image_processing/cv2_processing/rotate.py" = ["N803", "N806"]
"pd_book_tools/image_processing/external_tools.py" = ["N803"]
"pd_book_tools/image_processing/formats.py" = ["F401"]  # pillow_avif import is for side-effect (plugin registration)
"pd_book_tools/layout/geometry.py" = ["N806"]
"pd_book_tools/ocr/cv2_tesseract.py" = ["N816"]  # pytesseract_Output mirrors the module attribute name
"pd_book_tools/ocr/doctr_support.py" = ["F401"]  # doctr models imported to force module load
"pd_book_tools/ocr/document.py" = ["N806"]
"pd_book_tools/ocr/dropcap.py" = ["N806", "N815"]
"pd_book_tools/ocr/layout_aware_reorg.py" = ["N806"]
"pd_book_tools/ocr/page.py" = ["N811", "E402"]  # N811: cv2_ prefix convention; E402: deferred inspect import
"pd_book_tools/ocr/reorganize_page_utils.py" = ["N803", "N806", "N811", "N815"]  # N811: cv2_ prefix convention
"pd_book_tools/utility/timing.py" = ["N803"]
"tests/hf/test_hf.py" = ["N818"]  # _NotFound: test-internal sentinel, not a public API
"tests/image_processing/cupy_processing/test_edge_finding.py" = ["N806"]
"tests/image_processing/cupy_processing/test_rotate.py" = ["N806"]
"tests/image_processing/cv2_processing/test_edge_finding.py" = ["N806"]
"tests/image_processing/test_formats.py" = ["F401"]  # import for side-effect (plugin registration)
"tests/layout/test_detector.py" = ["N806"]
"tests/layout/test_geometry.py" = ["N802", "N803"]
"tests/layout/test_layout_aware_reorg.py" = ["N803"]
"tests/ocr/test_block.py" = ["N803", "N806"]
"tests/ocr/test_cv2_tesseract.py" = ["B017", "N803"]  # B017: broad Exception is intentional (cv2 version varies)
"tests/ocr/test_document.py" = ["T201"]  # debug print helpers for fixture development
"tests/ocr/test_dropcap.py" = ["N802"]
"tests/ocr/test_page.py" = ["T201"]  # debug print helper for test inspection
"tests/ocr/test_reorganize_diagnostic_snapshots.py" = ["N803"]
"tests/test_public_api.py" = ["N814"]  # _BB alias: underscore-prefixed for identity tests
"tests/utility/test_ipynb_widgets.py" = ["E402"]  # imports after pytest.importorskip guard
"tests/utility/test_timing.py" = ["N802"]
# Enum members are list-typed values; RUF012 incorrectly treats them as mutable class attributes
"pd_book_tools/ocr/ground_truth_matching_helpers/character_groups.py" = ["RUF012"]
# CLI scripts and fixture scripts — print() is the output mechanism
"scripts/*.py" = ["T201"]
"tests/fixtures/layout_regression/*.py" = ["T201"]

[tool.basedpyright]
# Include source, tests, and scripts. Match the layout this repo uses.
include = ["pd_book_tools", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]

# Start at "standard" — Task 8 upgrades to "recommended" after the easy wins land.
# "standard" gives us most basedpyright value without the unannotated-function
# avalanche. "recommended" mode is the workspace target per the strict-linting
# decisions doc.
typeCheckingMode = "standard"

# Tell basedpyright where the venv is so it finds third-party stubs.
venvPath = "."
venv = ".venv"

# Per-execution-environment overrides: tests get more leniency for now.
# Note: typeCheckingMode is not valid per-environment; use the root-level setting.
[[tool.basedpyright.executionEnvironments]]
root = "tests"

[[tool.basedpyright.executionEnvironments]]
root = "scripts"

# Pytest configuration
[tool.pytest.ini_options]
addopts = "--cov=pd_book_tools --cov-report=term-missing:skip-covered --cov-report=html"
markers = [
    "gpu: marks tests as requiring GPU/CUDA functionality",
    "cupy: marks tests as requiring CuPy library",
    "torch_cuda: marks tests as requiring PyTorch CUDA",
    "slow: marks tests as slow (use -m 'not slow' to skip)",
    "integration: marks tests as integration tests"
]
# Skip GPU tests by default in CI environments
filterwarnings = [
    "ignore::UserWarning:cupy.*",
    "ignore::FutureWarning:torch.*"
]
