[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "pdomain-book-tools"
dynamic = ["version"]
description = "Python tools for working with public domain book scans"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "huggingface_hub>=0.23",
    "ipython>=8.34",
    "ipywidgets>=8.1",
    "matplotlib>=3.10.1",
    "numpy (>=2.2,<3)",
    "opencv-contrib-python>=4.12.0.88",
    "pandas>=2.2.3",
    # Pillow was previously a transitive dep (via matplotlib / others). It is
    # now declared directly because pdomain_book_tools owns its image-format
    # contract: pillow-heif / pillow-avif-plugin both register decoders with
    # Pillow at import time, so we need an explicit version contract.
    "Pillow>=10.0",
    # HEIF/HEIC decode via libheif (LGPL-3) + libde265 (LGPL-3). pillow-heif
    # itself is BSD-3. We rely on Python's dynamic-loading model (LGPL §6 —
    # explicitly permits dynamic linking with a non-LGPL caller) to remain
    # compatible with this project's Unlicense terms; do not statically link
    # or bundle libheif into a derived binary. We only ever decode
    # (never encode HEVC), so the x265 GPL/patent path does not apply.
    "pillow-heif>=0.18",
    # AVIF decode via libaom (BSD-2) through pillow-avif-plugin (MIT) —
    # fully permissive, no LGPL caveats.
    "pillow-avif-plugin>=1.4",
    "pydantic>=2.0",
    "pytesseract (>=0.3.13,<0.4.0)",
    "python-doctr",
    "regex (>=2024.11.6,<2025.0.0)",
    "shapely>=2.0",
    "thefuzz (>=0.22.1,<0.23.0)",
    "torch>=2.6",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.45",
]

[project.optional-dependencies]
# CUDA-12-only GPU acceleration. Opt-in to avoid breaking CPU-only installs
# (CI, macOS, CPU-only Linux). Install with: pip install 'pdomain-book-tools[gpu]'
gpu = [
    "cupy-cuda12x>=13.4.1",
    "opencv-cuda>=0.0.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pytest-cov>=6.2.1",
    "pytest>=8.3",
    "ruff>=0.15.13",
    "pytest-xdist>=3.8.0",
    "gitlint>=0.19.1",
]


[project.urls]
Homepage = "https://github.com/pdomain/pdomain-book-tools"
Repository = "https://github.com/pdomain/pdomain-book-tools"

[tool.hatch.version]
source = "vcs"

# Generated at build time; do not edit. Tracked in .gitignore.
# Importable as `from pdomain_book_tools._version import __version__, version`.
[tool.hatch.build.hooks.vcs]
version-file = "pdomain_book_tools/_version.py"

[tool.uv]
required-version = ">=0.11.16"

[tool.uv.sources]
# Pin to an immutable commit SHA — do not use a bare branch/tag reference.
# To upgrade: find the desired commit in mindee/doctr, update the rev= value,
# run `uv lock`, verify tests, then commit both this file and uv.lock together.
python-doctr = { git = "https://github.com/mindee/doctr.git", rev = "390330ebe4fe25f214d84df89dc0f9b4dcdbf447" }

[tool.coverage.run]
source = ["pdomain_book_tools"]
branch = true
omit = [
    "*/tests/*",
    # Virtualenv / VCS internals. NOTE: do NOT use a broad "*/.*/*" glob here —
    # it also matches any source file whose path contains a dot-prefixed
    # directory segment (e.g. a git worktree under ".worktrees/"), which
    # silently omits the entire package and makes coverage report 0%.
    "*/.venv/*",
    "*/.tox/*",
    "*/site-packages/*",
    # cv2cuda_processing is a thin wrapper; GPU tests exercise cupy_processing directly.
    "*/image_processing/cv2cuda_processing/*",
]
# "multiprocessing" is required so pytest-xdist (-n auto) per-worker
# subprocesses each write a .coverage.* file that `coverage combine` can
# merge; without it the worker data is dropped and the total reports 0%.
# "thread" stays for NiceGUI & timers that may spawn threads.
concurrency = ["multiprocessing", "thread"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 87  # TODO: ratchet up as branch-coverage gaps land tests (was 80 pre-branch, 89.6% post-branch)
precision = 1
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
    "^if TYPE_CHECKING:",
    "^\\s*pass$",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff.lint]
select = [
    # Current baseline
    "E", "W",       # pycodestyle errors/warnings
    "F",            # pyflakes
    "I",            # isort (replaces standalone isort)
    "N",            # pep8-naming
    "B",            # flake8-bugbear — mutable defaults, broad excepts, etc.
    "SIM",          # flake8-simplify
    "UP",           # pyupgrade
    "RUF",          # ruff-specific rules
    "ERA",          # eradicate — commented-out code
    "T20",          # flake8-print
    # Added per 2026-05-17 strict-linting decisions
    "ANN",          # flake8-annotations — force type hints on all sigs
    "S",            # flake8-bandit — security rules
    "C4",           # flake8-comprehensions
    "PERF",         # perflint — performance anti-patterns
    "TC",           # flake8-type-checking — move type-only imports to TYPE_CHECKING
    "TID",          # flake8-tidy-imports
    "PT",           # flake8-pytest-style
    "RET",          # flake8-return
    "PL",           # pylint subset (PLC + PLE + PLR + PLW)
    "D",            # pydocstyle
    # Added per 2026-05-17 guidelines audit (BLE/TRY/LOG/G)
    "BLE",          # flake8-blind-except
    "TRY",          # tryceratops — TRY400 enforces log.exception over log.error in except
    "LOG",          # flake8-logging — proper log.* usage
    "G",            # flake8-logging-format — lazy formatting in log calls
]
ignore = [
    # `l` is widely used as the loop-variable name for "line" in the OCR layout
    # code. Renaming everywhere is invasive and the meaning is always
    # unambiguous from context (always paired with `.bounding_box`, `.text`,
    # `.minX/minY/...`). Suppressing E741 keeps the convention consistent.
    "E741",
    # Line length: many long docstrings, error messages, and URLs; enforcing
    # 88-char wrapping everywhere adds noise without improving readability.
    "E501",
    # Docstring style: D203 (1-blank-before-class-docstring) conflicts with
    # D211 (no-blank-before-class-docstring); D212 (multi-line-summary-first-line)
    # conflicts with D213 (multi-line-summary-second-line). Pick one of each pair.
    "D203",
    "D212",
    # Missing docstrings on public modules/packages/magic-methods: large
    # existing codebase; add incrementally, not in a single lint sweep.
    "D100",
    "D104",
    "D107",
    # ANN101/ANN102 (self/cls annotations) are deprecated in ruff >= 0.2.
    "ANN101",
    "ANN102",
    # PLR0913 (too-many-arguments): OCR/image functions legitimately need many
    # params; enforcing here would require invasive config-object refactors.
    "PLR0913",
    # PLR2004 (magic-value-comparison): common in OCR geometry/threshold code.
    "PLR2004",
    # TRY003 (long-message-outside-exception-class): too noisy for a library
    # that uses f-string error messages everywhere.
    "TRY003",
    # COM812 (missing-trailing-comma): conflicts with ruff formatter auto-style.
    "COM812",
    # PLC0415 (import-not-at-top-level): deferred imports are a legitimate
    # pattern here — used to break circular deps (e.g. block ↔ page) and to
    # avoid loading optional-heavy modules (warnings, math, cupy) until needed.
    # Suppressing globally; circular-import deferred imports can't be moved
    # without architectural refactors.
    "PLC0415",
    # PLR complexity rules: OCR pipeline functions legitimately have high
    # branch/return counts; enforcing these would require invasive refactors
    # not warranted by the linting rollout.
    "PLR0912",  # too-many-branches
    "PLR0911",  # too-many-return-statements
    "PLR0915",  # too-many-statements
    # ANN401 (dynamically-typed-expressions): some functions legitimately
    # accept/return Any (e.g. JSON deserialisers, generic dispatch helpers).
    "ANN401",
    # D205 (1-blank-line-required-between-summary-and-description): enforcing
    # this across the entire docstring backlog is too noisy for one commit.
    "D205",
    # D105 (missing-docstring-in-magic-method): __repr__, __eq__, etc. are
    # self-documenting; require incrementally on new code only.
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pdomain_book_tools"]

[tool.ruff.lint.per-file-ignores]
# Tests: assert is the idiom (S101); magic numbers common (PLR2004); no
# annotations required (ANN); no docstrings required (D); security rules
# relaxed (S105/S106/S311 — hardcoded passwords/random are test fixtures);
# pytest.raises match= not required for every test (PT011);
# /tmp paths are fine in tests (S108); trivial comparisons can be intentional (PLR0133);
# loop-var reassignment as pattern (PLW2901); list-building loops in tests are fine (PERF401).
"tests/**/*.py" = ["S101", "S105", "S106", "S311", "T201", "ANN", "D", "PLR2004", "PT011", "S108", "PLR0133", "PLW2901", "PERF401"]
# Scripts: print() is the output mechanism; no docstrings required; S607 partial
# executable path is idiomatic when invoking system tools (uv, git, etc.)
"scripts/*.py" = ["T201", "D", "S607", "N999"]
"tests/fixtures/layout_regression/*.py" = ["T201"]
# __init__.py: re-exports without docstrings; F401 used for public API surface.
"**/__init__.py" = ["D104", "F401", "TC"]
# Private modules: internal convention, no docstrings required.
"**/_*.py" = ["D"]
# Test files with camelCase coordinate API usage — these also get N806
"tests/image_processing/cupy_processing/test_edge_finding.py" = ["N806"]
"tests/image_processing/cupy_processing/test_rotate.py" = ["N806"]
"tests/image_processing/cv2_processing/test_edge_finding.py" = ["N806"]
"tests/image_processing/test_formats.py" = ["F401"]  # import for side-effect (plugin registration)
"tests/layout/test_detector.py" = ["N806"]
"tests/layout/test_geometry.py" = ["N802", "N803"]
"tests/layout/test_layout_aware_reorg.py" = ["N803"]
"tests/ocr/test_block.py" = ["N803", "N806"]
"tests/ocr/test_cv2_tesseract.py" = ["B017", "N803"]  # B017: broad Exception is intentional (cv2 version varies)
"tests/ocr/test_document.py" = ["T201"]  # debug print helpers for fixture development
"tests/ocr/test_dropcap.py" = ["N802"]
"tests/ocr/test_page.py" = ["T201"]  # debug print helper for test inspection
"tests/ocr/test_reorganize_diagnostic_snapshots.py" = ["N803"]
"tests/test_public_api.py" = ["N814"]  # _BB alias: underscore-prefixed for identity tests
"tests/utility/test_ipynb_widgets.py" = ["E402"]  # imports after pytest.importorskip guard
"tests/utility/test_timing.py" = ["N802"]
"tests/hf/test_hf.py" = ["N818"]  # _NotFound: test-internal sentinel, not a public API
# Enum members are list-typed values; RUF012 incorrectly treats them as mutable class attributes
"pdomain_book_tools/ocr/ground_truth_matching_helpers/character_groups.py" = ["RUF012"]
# Heavy OCR pipeline files: annotation debt (ANN) + docstring debt (D) +
# logging string-concatenation (G003/G004) + BLE/TRY patterns not touched
# in this rollout. Add individually as each file gets a focused pass.
"pdomain_book_tools/ocr/page.py" = ["N811", "E402", "ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401", "S108"]
"pdomain_book_tools/ocr/reorganize_page_utils.py" = ["N803", "N806", "N811", "N815", "ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401"]
"pdomain_book_tools/ocr/ground_truth_matching.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401", "PLW0603"]
"pdomain_book_tools/geometry/bounding_box.py" = ["N802", "F401", "ANN", "D", "G003", "G004", "S108"]
"pdomain_book_tools/ocr/document.py" = ["N806", "ANN", "D", "G003", "G004", "BLE001", "TRY"]
"pdomain_book_tools/pgdp/pgdp_results.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401", "S108"]
"pdomain_book_tools/ocr/doctr_support.py" = ["F401", "ANN", "D", "G003", "G004", "BLE001", "TRY"]
"pdomain_book_tools/ocr/word.py" = ["ANN", "D", "G003", "G004", "PERF401", "BLE001"]
"pdomain_book_tools/geometry/point.py" = ["N806", "ANN", "D"]
"pdomain_book_tools/image_processing/cv2_processing/perspective_adjustment.py" = ["N806", "ANN", "D", "G003", "G004", "BLE001", "TRY", "S108"]
"pdomain_book_tools/ocr/block.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401"]
"pdomain_book_tools/ocr/image_utilities.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY"]
"pdomain_book_tools/layout/types.py" = ["ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/color_to_gray.py" = ["N806", "ANN", "D", "G003", "G004"]
"pdomain_book_tools/hf/download.py" = ["N806", "ANN", "D", "G003", "G004", "BLE001", "TRY", "S110"]
"pdomain_book_tools/hf/models.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY"]
"pdomain_book_tools/image_processing/cv2_processing/canvas.py" = ["ANN", "D", "G003", "G004"]
"pdomain_book_tools/image_processing/cv2_processing/edge_finding.py" = ["N806", "ANN", "D", "G003", "G004"]
"pdomain_book_tools/image_processing/cv2_processing/rescale.py" = ["ANN", "D", "G003", "G004"]
"pdomain_book_tools/utility/timing.py" = ["N803", "ANN", "D", "G003", "G004"]
"pdomain_book_tools/image_processing/cupy_processing/deskew.py" = ["N806", "ANN", "D", "G003", "G004"]
"pdomain_book_tools/ocr/dropcap.py" = ["N806", "N815", "ANN", "D", "G003", "G004", "BLE001", "TRY"]
"pdomain_book_tools/ocr/layout_aware_reorg.py" = ["N806", "ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401"]
"pdomain_book_tools/layout/registry.py" = ["ANN", "D", "G003", "G004"]
"pdomain_book_tools/layout/visualize.py" = ["ANN", "D", "G003", "G004"]
"pdomain_book_tools/ocr/cv2_tesseract.py" = ["N816", "ANN", "D", "G003", "G004"]
"pdomain_book_tools/ocr/review.py" = ["ANN", "D"]
"pdomain_book_tools/layout/geometry.py" = ["N806", "ANN", "D", "G003", "G004"]
"pdomain_book_tools/image_processing/formats.py" = ["F401", "ANN", "D", "BLE001"]
"pdomain_book_tools/image_processing/external_tools.py" = ["N803", "ANN", "D", "G003", "G004", "BLE001", "S607"]
"pdomain_book_tools/utility/ipynb_widgets.py" = ["ANN", "D"]
"pdomain_book_tools/image_processing/cv2_processing/contours.py" = ["N806", "ANN", "D", "G003", "G004"]
"pdomain_book_tools/image_processing/cv2_processing/crop.py" = ["N803", "N806", "ANN", "D"]
"pdomain_book_tools/image_processing/cv2_processing/rotate.py" = ["N803", "N806", "ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/contours.py" = ["N806", "ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/crop.py" = ["N803", "N806", "ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/edge_finding.py" = ["N806", "ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/filters.py" = ["ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/morph.py" = ["ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/rescale.py" = ["ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/rotate.py" = ["ANN", "D"]
"pdomain_book_tools/image_processing/cupy_processing/threshold.py" = ["ANN", "D"]
"pdomain_book_tools/layout/adapters/pp_doclayout.py" = ["ANN", "D"]
"pdomain_book_tools/layout/_mappings.py" = ["ANN", "D"]
"pdomain_book_tools/ocr/ground_truth_matching_helpers/match_helpers.py" = ["ANN", "D", "PERF401"]
"pdomain_book_tools/pgdp/pgdp_page_image.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "S314", "S307"]

[tool.basedpyright]
# Include source, tests, and scripts. Match the layout this repo uses.
include = ["pdomain_book_tools", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]

# "recommended" is the workspace-canonical strict mode per 2026-05-17 decisions.
# Catches unannotated functions, inferred-Any propagation, untyped decorators,
# and missing return types that "standard" mode skips.
typeCheckingMode = "recommended"
# Warnings are tracked separately; CI/release gates enforce errors only via
# `basedpyright ... --level error`.
failOnWarnings = false

# Import cycles are structural (geometry↔OCR protocol types, etc.) and
# resolved via TYPE_CHECKING guards. Suppress the per-file error here;
# actual import order issues would surface as runtime ImportErrors.
reportImportCycles = "none"

# Tell basedpyright where the venv is so it finds third-party stubs.
venvPath = "."
venv = ".venv"

# Per-execution-environment overrides: tests get more leniency for now.
# Note: typeCheckingMode is not valid per-environment; use the root-level setting.
[[tool.basedpyright.executionEnvironments]]
root = "tests"

[[tool.basedpyright.executionEnvironments]]
root = "scripts"

# Pytest configuration
[tool.pytest.ini_options]
addopts = [
    "-ra",                       # show short summary of all non-pass outcomes
    "--strict-markers",          # fail on unknown markers
    "--strict-config",           # fail on unknown pytest config keys
    "--cov=pdomain_book_tools",
    "--cov-branch",              # measure branch coverage (gates except-path testing)
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "-m", "not slow",            # exclude slow (model-download) tests by default; use make test-slow to include
]
markers = [
    "gpu: marks tests as requiring GPU/CUDA functionality",
    "cupy: marks tests as requiring CuPy library",
    "torch_cuda: marks tests as requiring PyTorch CUDA",
    "slow: marks tests as slow (use -m 'not slow' to skip)",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    # Treat all warnings as errors — surfaces deprecation issues at LLM-iteration time.
    "error",
    # Pre-existing ignores: third-party noise that isn't actionable here.
    "ignore::UserWarning:cupy.*",
    "ignore::FutureWarning:torch.*",
    # Add new ignores below as new warnings surface — each one with a comment
    # explaining the package and why we tolerate it.
]
